# taskflow

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  render.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c41cb6192a7_create_project_and_task_tables.py  c014b3de363c_add_task_position.py  db9ce0f43d95_create_user_team_membership_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  members.py  projects.py  tasks.py  teams.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  membership.py  project.py  task.py  team.py  user.py
backend/app/schemas/: member.py  project.py  task.py  team.py  user.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_cors.py  test_db.py  test_members.py  test_models.py  test_projects.py  test_security.py  test_tasks.py  test_teams.py
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vercel.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.test.tsx  AppLayout.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  RouteFallback.tsx  RouteTransition.test.tsx  RouteTransition.tsx
frontend/src/components/toast/: ToastProvider.test.tsx  ToastProvider.tsx  Toaster.tsx  (+1 more)
frontend/src/hooks/: useModalA11y.ts  usePrefersReducedMotion.ts
frontend/src/lib/: api.ts  motion.test.ts  motion.ts  token.test.ts  token.ts
frontend/src/test/: setup.ts  utils.tsx
(+61 files in other folders)
