[project]
name = "taskflow-backend"
version = "0.1.0"
description = "Backend API for Taskflow, a project management system."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pytest>=8.3",
    "httpx>=0.27",
    "pre-commit>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = ["^alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
